# volsync-operator

./: Dockerfile  README.md  Taskfile.yaml  helmify.sh  pyproject.toml  skaffold.yaml
manifests/operator/: cluster-role-binding.yaml  cluster-role.yaml  deployment.yaml  kustomization.yaml  service-account.yaml
volsync_operator/: __init__.py  deployer.py
volsync_operator/deploy/: pvc.py  util.py
volsync_operator/templates/: pvc-state.yaml  replicationsource.yaml  secret.yaml
