[tool.poetry]
name = "volsync_operator"
version = "0.0.1"
description = "Kubernetes Operator to manage volsync ReplicationSource and associated Secrets"
authors = ["juniorfoo <joey@schwerv.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "volsync_operator"}]
requires-poetry = ">=2.0"

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^28.1.0"
kopf = "^1.37.2"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
async-timeout = "^4.0.3"

[tool.poetry.group.dev.dependencies]
pylama = "^8.4.1"
pytest = "^7.4.3"
black = "^24.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
